# pytest-parallel-artifact-manifest-example

./: .gitignore  README.md  discover.py  main.py  pyproject.toml  run_chunk.py  test_example.py
.buildkite/: pipeline.yml
