[project]
name = "pytest-parallel-artifact-manifest-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "buildkite-sdk>=0.3.3",
    "pytest>=8.4.2",
    "pytest-discover>=0.4.0",
    "pytest-json-report>=1.5.0",
]
